Extended asset model
